--- a/remote_template.html
+++ b/remote_template.html
@@ -300,8 +300,11 @@
       .field-grid.halves  { grid-template-columns: 1fr; }
     }
   </style>
-
-
+dpp_dump:
+{{dpp_dump}}
+<p></p>
+DPP_DATA:
+{{DPP_DATA}}
   <!-- ══ HEADER ══════════════════════════════════ -->
   <header class="passport-header">
     <div class="header-inner">
