--- a/remote_template.html
+++ b/remote_template.html
@@ -35,6 +35,7 @@
       color: white;
       position: relative;
       overflow: hidden;
+      width: 100%;
     }
     .passport-header::before {
       content: '';
@@ -300,11 +301,7 @@
       .field-grid.halves  { grid-template-columns: 1fr; }
     }
   </style>
-dpp_dump:
-{{dpp_dump}}
-<p></p>
-DPP_DATA:
-{{DPP_DATA}}
+
   <!-- ══ HEADER ══════════════════════════════════ -->
   <header class="passport-header">
     <div class="header-inner">
