--- a/remote_template.html
+++ b/remote_template.html
@@ -409,7 +409,7 @@
         <div class="divider"></div>
         <div class="field">
           <div class="field-label">Description</div>
-          <div class="field-value">{{credentialSubject.description}}</div>
+          <div class="field-value">{{loud credentialSubject.description}}</div>
         </div>
         {{/if}}
         {{#if credentialSubject.idScheme.name}}
